# Frangine

./: .gitignore  README_GUI.md  frabgine_builder_gui.py  legacy_code_all.txt
3tone/: 1.py  2.py  CMakeLists.txt  collect.py  collectCode.py  collectHead.py  folder_structure.txt  scrpt.py
3tone/docs/: 1.txt  2.txt  3.txt  3tone_code.txt  3tone_files.txt  3tone_gamemodule.txt  3tone_heads.txt  4.txt  Constant.txt  mainGame.cpp  mainLev2.cpp  mainLevels.cpp  mainMT.cpp
3tone/docs/diary/: 1.txt  2.txt
3tone/include/glad/: glad.h
3tone/src/: arxglue.hpp  glad.c  main.cpp  main1.cpp  main2.cpp
3tone/src/assets/: asset_manager.cpp  asset_manager.hpp  stb_impl.cpp
3tone/src/core/: baking.cpp  baking.hpp  context.hpp  core_module.cpp  core_module.hpp  executor.cpp  executor.hpp  graph.cpp  graph.hpp  node.hpp  thread_pool.hpp
3tone/src/examples/: 1.py
3tone/src/examples/doodlejump/: DoodleJumpGame.cpp  DoodleJumpGame.hpp
3tone/src/game/: DoodleJumpGame.cpp  DoodleJumpGame.hpp  Game.cpp  Game.hpp  ProceduralPlatformGenerator.cpp  ProceduralPlatformGenerator.hpp  game_module.cpp  game_module.hpp  game_object.cpp  game_object.hpp  scene.cpp  scene.hpp
3tone/src/math/ga/: conversions.hpp  signature.hpp  versor.hpp
3tone/src/nodes/: asset_node.cpp  asset_node.hpp  basic_nodes.cpp  basic_nodes.hpp  checker_texture.cpp  checker_texture.hpp  convert_node.cpp  convert_node.hpp  ga_nodes.hpp  node_factory.hpp  render_nodes.cpp  render_nodes.hpp  text_texture_node.cpp  text_texture_node.hpp
3tone/src/nodes/coren/: asset_node.cpp  asset_node.hpp  basic_nodes.cpp  basic_nodes.hpp  checker_texture.hpp  convert_node.cpp  convert_node.hpp  text_texture_node.cpp  text_texture_node.hpp
3tone/src/nodes/mathn/: ga_nodes.hpp
3tone/src/nodes/rendern/: render_nodes.cpp  render_nodes.hpp
3tone/src/nodes/soundn/: filter_nodes.cpp  filter_nodes.hpp  generator_nodes.cpp  generator_nodes.hpp  io_nodes.cpp  io_nodes.hpp  mixer_nodes.cpp  mixer_nodes.hpp  spatial_nodes.cpp  spatial_nodes.hpp
3tone/src/nodes/uin/: ui_nodes.cpp  ui_nodes.hpp  ui_render_node.cpp  ui_render_node.hpp
3tone/src/render/: camera.cpp  camera.hpp  command_buffer.cpp  command_buffer.hpp  font.cpp  font.hpp  graphics_device.cpp  graphics_device.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  render_module.cpp  render_module.hpp  render_target.cpp  render_target.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
3tone/src/sound/: audio_asset.cpp  audio_asset.hpp  audio_backend.hpp  audio_buffer.hpp  audio_context.hpp  audio_device.hpp  audio_graph.cpp  audio_graph.hpp  audio_node.hpp  audio_spec.hpp  ga_spatial.cpp  ga_spatial.hpp  miniaudio_backend.cpp  miniaudio_backend.hpp  miniaudio_impl.cpp  sound_module.cpp  sound_module.hpp
3tone/src/sound/dsp/: biquad.cpp  biquad.hpp
3tone/src/threading/: thread_pool.hpp
3tone/src/types/: type_system.hpp
3tone/src/ui/: input_manager.cpp  input_manager.hpp  ui_module.cpp  ui_module.hpp  ui_nodes.cpp  ui_nodes.hpp  ui_render_node.cpp  ui_render_node.hpp
ArxRender/: 1.py  CMakeLists.txt  arxrender_code.txt  struct.txt
ArxRender/arxglue/: arxrender_nodes.cpp  arxrender_nodes.hpp
ArxRender/include/: arxrender.hpp  arxrender_backend.hpp  arxrender_command.hpp  arxrender_context.hpp  arxrender_device.hpp  arxrender_log.hpp  arxrender_pipeline.hpp  arxrender_resource.hpp  arxrender_surface.hpp  arxrender_types.hpp
ArxRender/src/: arxrender.cpp  arxrender_command.cpp  arxrender_context.cpp  arxrender_device.cpp  arxrender_log.cpp  arxrender_pipeline.cpp  arxrender_resource.cpp  arxrender_surface.cpp  internal.hpp
ArxRender/src/backends/: backend_metal.cpp  backend_null.cpp  backend_opengl.cpp  backend_opengl_es.cpp  backend_vulkan.cpp  backend_webgl.cpp
ArxRender/tests/: CMakeLists.txt  test_basic.cpp
arxsound/: 1.py  CMakeLists.txt  struct.txt
arxsound/arxglue/: arxsound_node.cpp  arxsound_node.hpp
arxsound/cmake/: ArxSoundConfig.cmake.in
arxsound/include/: arxsound.hpp  arxsound_backend.hpp  arxsound_context.hpp  arxsound_convert.hpp  arxsound_device.hpp  arxsound_log.hpp  arxsound_types.hpp
arxsound/src/: arxsound.cpp  arxsound_convert.cpp
arxsound/src/backends/: backend_aaudio.cpp  backend_alsa.cpp  backend_coreaudio.cpp  backend_null.cpp  backend_wasapi.cpp  backend_webaudio.cpp
arxsound/src/core/: 3tone_gamemodule.txt  core_module.cpp  node.hpp  type_system.hpp
arxsound/src/core/math/ga/: multivector.hpp  simd_optimized.hpp
arxsound/tests/: CMakeLists.txt  main.cpp  test_arxsound_arxglue_integration.cpp  test_arxsound_core.cpp
docs/: Старый движок автодока.txt
frabgine_engine/: CMakeLists.txt  Frabgine.hpp  README.md
frabgine_engine/core/math/: MathUtils.hpp  Matrix.hpp  Quaternion.hpp  Vector.hpp
frabgine_engine/core/memory/: MemoryPool.hpp  SmartPointers.hpp
frabgine_engine/core/serialization/: BinarySerializer.cpp  BinarySerializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp  Serializer.hpp
frabgine_engine/core/utils/: FileUtils.cpp  FileUtils.hpp  Logger.hpp  TaskScheduler.hpp  Timer.hpp
frabgine_engine/docs/: DEVELOPMENT_PLAN.md
frabgine_engine/editor/nodes/: NodeGraph.cpp  NodeGraph.hpp
frabgine_engine/engine/scene/: SceneGraph.cpp  SceneGraph.hpp
frabgine_engine/graphics/vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp
space_rogue/: CMakeLists.txt  Structure.txt  roadmap.txt
space_rogue/src/: collect.py  main.cpp
space_rogue/src/game/: camera.cpp  camera.hpp  input_handler.cpp  input_handler.hpp  player.cpp  player.hpp
space_rogue/src/math/: math.hpp
space_rogue/src/particles/: particle_emitter.cpp  particle_emitter.hpp
space_rogue/src/procgen/: perlin.cpp  perlin.hpp  voxel_field.cpp  voxel_field.hpp
space_rogue/src/render/: marching_cubes.cpp  marching_cubes.hpp  mesh.cpp  mesh.hpp  shader_compiler.cpp  shader_compiler.hpp  vulkan_context.cpp  vulkan_context.hpp
space_rogue/src/shaders/: mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  triangle.vert
space_rogue/src/tools/: voxel_to_mesh.cpp  voxel_to_mesh.hpp
документы для работы/: Опис Frabgine.txt  (+1 more)
(+17 files in other folders)
